--- a/banckend/package.json
+++ b/banckend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./index.js localhost 5000"
   },
-  "author": "Matheus <matheus@horadecodar.com.br> (http://www.horadecodar.com.br/)",
+  "author": "James <jameshirx@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
